# guardian-os-v1

./: .gitignore  ARCHITECTURE.md  BUILD_PROGRESS.md  CONTRIBUTING.md  INTEGRATION-SUMMARY.md  LICENSE  Makefile  README.md  TRADEMARKS.md  build-v1.1.sh  prepare-commit.sh  setup.sh  test-endpoints.sh
.github/workflows/: build-iso.yml
branding/: README.md  convert-assets.sh
branding/grub/: generate-grub-assets.sh  theme.txt
branding/plymouth/: guardian.plymouth  guardian.script
calamares/: settings.conf
calamares/branding/guardian/: branding.desc
calamares/modules/: guardian_apply.conf  guardian_auth.conf  guardian_claim.conf  guardian_wifi.conf
calamares/modules-impl/: guardian_auth.py  guardian_claim.py  guardian_wifi.py
deployment/: .env.example  check-db.exp  check-db2.exp  check.exp  connect.exp  create-env.exp  deploy.sh  docker-compose-lite.yml  docker-compose.yml  remote-deploy.sh  setup-base.exp  start-stack.exp  update-domain.exp  update-s3.exp  upload-lite.exp  upload.exp
deployment/init-db/: 001-schema.sql
docs/: API-INTEGRATION.md  APT-REPO.md  ARCHITECTURE_DEFINITIVE.md  ARCHITECTURE_v2.md  INSTALLER-ARCHITECTURE.md  INVENTORY.md  ISO-BUILD.md  PROJECT_STATUS.md  README.md  TESTING.md
docs/architecture/: AGE_TIERS.md  ALERT_SYSTEM.md  CONTACT_INTELLIGENCE.md  DNS_NETWORK.md  OVERVIEW.md  PRIVACY.md
guardian-branding/: README.md
guardian-branding/desktop-entries/: com.system76.CosmicCalculator.desktop  com.system76.CosmicEdit.desktop  com.system76.CosmicFiles.desktop  com.system76.CosmicSettings.desktop  com.system76.CosmicStore.desktop  com.system76.CosmicTerm.desktop
guardian-components/guardian-daemon/: Cargo.toml  supabase_anon_key.txt
guardian-components/guardian-daemon/src/: activation.rs  activity.rs  config.rs  dbus.rs  game_library.rs  main.rs  malcontent.rs  monitor.rs  rules.rs  storage.rs  supabase.rs  sync_client.rs
guardian-components/guardian-dns/: Cargo.toml  README.md  build.sh
guardian-components/guardian-dns/config/: dns.toml  guardian-dns.service
guardian-components/guardian-dns/src/: blocklist.rs  config.rs  logger.rs  main.rs  safesearch.rs  server.rs  vpn_detect.rs
guardian-components/guardian-selector/: Cargo.toml
guardian-components/guardian-selector/src/: auth.rs  config.rs  main.rs  supabase.rs  ui.rs
guardian-components/guardian-settings/: Cargo.toml
guardian-components/guardian-settings/src/: api.rs  app.rs  config.rs  main.rs  widgets.rs
guardian-components/guardian-settings/src/pages/: alerts.rs  content_filter.rs  devices.rs  family.rs  mod.rs  screen_time.rs
guardian-components/guardian-store/: Cargo.toml
guardian-components/guardian-store/src/: api.rs  app.rs  catalog.rs  daemon.rs  main.rs  ratings.rs
guardian-components/guardian-wizard/: Cargo.toml
guardian-components/guardian-wizard/src/: api.rs  main.rs  pages.rs  state.rs
guardian-installer/: CHANGELOG-v1.1.0.md  Cargo.toml  README.md  i18n.toml  justfile
guardian-installer/debian/: 99guardian-installer-casper  changelog  control  guardian-installer-casper.install  guardian-installer.postinst  guardian-installer.postrm
guardian-installer/i18n/en/: cosmic_initial_setup.ftl
guardian-installer/i18n/en-GB/: cosmic_initial_setup.ftl
guardian-installer/res/: cities.bitcode-v0-6  com.guardian.GuardianInstaller.Autostart.desktop  com.guardian.GuardianInstaller.desktop
guardian-installer/src/: main.rs
guardian-installer/src/page/: guardian_auth.rs  guardian_child.rs  guardian_protection.rs  guardian_sync.rs  mod.rs  wallpaper.rs
guardian-pop-installer/: GUARDIAN-MODS.md  README.md
guardian-pop-installer/src/Views/: GuardianAuthView.vala  GuardianChildView.vala
guardian-sync-server/: .env.example  Cargo.toml  Dockerfile  README.md  build-linux.sh  build.rs  deploy.sh
guardian-sync-server/migrations/: 003_chat_support.sql
guardian-sync-server/proto/: auth.proto  family.proto  file.proto  sync.proto
guardian-sync-server/src/: config.rs  error.rs  lib.rs  main.rs
guardian-sync-server/src/db/: accounts.rs  auth.rs  devices.rs  families.rs  files.rs  mod.rs  settings.rs
guardian-sync-server/src/grpc/: auth.rs  family.rs  file.rs  mod.rs  sync.rs
guardian-sync-server/src/services/: auth.rs  family.rs  file.rs  mod.rs  sync.rs
iso-builder/: README.md  build-iso-fixed.sh  build-iso.sh  build-minimal-test.sh
iso-builder/config/: packages.list  remove-packages.list
iso-builder/config/hooks/: 01-pre-install.sh  02-branding.sh  99-post-install.sh
iso-builder/config/overlay/etc/skel/.config/autostart/: guardian-wizard.desktop
iso-builder/config/overlay/usr/share/applications/: guardian-settings.desktop  guardian-store.desktop
iso-builder/scripts/: build-iso.sh
iso/includes.chroot/etc/dconf/db/local.d/: 00-guardian
iso/includes.chroot/etc/skel/.config/: mimeapps.list
nobara/: README.md  build-nobara.sh
nobara/branding/calamares/: branding.desc  show.qml
nobara/calamares-modules/: settings.conf
nobara/calamares-modules/guardianauth/: GuardianAuthPage.qml  main.py  module.desc
nobara/calamares-modules/guardianchild/: GuardianChildPage.qml  main.py  module.desc
nobara/kickstarts/: guardian-gnome.ks
scripts/: build-debs.sh  build-repo.sh  cleanup-i18n.sh  fetch-assets.sh  iso-build.sh  update-version.sh
