[package]
name = "guardian-installer"
version = "1.1.0"
description = "Guardian OS Installer - Family-safe Linux setup"
edition = "2024"
rust-version = "1.90"
license = "GPL-3.0"
authors = ["Guardian Network Solutions"]
repository = "https://github.com/guardian-network/guardian-os"

[dependencies]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols" }
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
geonames = { path = "geonames" }
heck = "0.5.0"

# Internationalization - simplified for EN-GB only
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"

indexmap = "2.11.3"
kdl = "6.5.0"
regex = "1"

# HTTP client for Supabase API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

ron = "0.11"
rust-embed = "8"
secure-string = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
hostname = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
slotmap = "1.0.7"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
xkb-data = "0.2.1"
zbus = "5"
zbus_polkit = "5.0.0"

# User account management
pwd = "1.4.0"
pwhash = "1.0.0"

[dependencies.accounts-zbus]
git = "https://github.com/pop-os/dbus-settings-bindings"

[dependencies.cosmic-comp-config]
git = "https://github.com/pop-os/cosmic-comp"

[dependencies.cosmic-randr-shell]
git = "https://github.com/pop-os/cosmic-randr"

[dependencies.cosmic-settings-subscriptions]
git = "https://github.com/pop-os/cosmic-settings-subscriptions"
default-features = false
features = ["accessibility", "network_manager"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "single-instance", "tokio", "winit", "xdg-portal"]

[dependencies.locale1]
git = "https://github.com/pop-os/dbus-settings-bindings"

[dependencies.locales-rs]
git = "https://github.com/AerynOS/locales-rs"

[dependencies.sctk]
version = "0.20.0"
package = "smithay-client-toolkit"

[features]
default = ["a11y", "wgpu"]
a11y = ["libcosmic/a11y"]
wgpu = ["libcosmic/wgpu"]

[profile.release]
lto = "thin"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace]
members = ["geonames"]

[patch.'https://github.com/pop-os/cosmic-protocols']
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//" }
