[package]
name = "guardian-sync-server"
version = "1.0.0"
edition = "2021"
authors = ["Guardian Network Solutions"]
description = "Synchronization server for Guardian OS - privacy-focused family computing"
license = "GPL-3.0"
keywords = ["sync", "guardian", "desktop", "family", "grpc"]
categories = ["network-programming", "web-programming"]
rust-version = "1.75"

[lib]
name = "guardian_sync_server"
path = "src/lib.rs"

[[bin]]
name = "guardian-sync-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync", "fs"] }
tokio-stream = "0.1"

# gRPC
tonic = { version = "0.12", features = ["transport", "gzip"] }
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP/REST API
axum = { version = "0.7", features = ["tokio", "json", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json"] }

# Redis caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Crypto & Auth
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
jsonwebtoken = "9.2"

# Async traits
async-trait = "0.1"

# HTTP client (for S3)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }

# AWS S3
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42"
aws-credential-types = "1.2"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
validator = { version = "0.16", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
