[package]
name = "guardian-dns"
version = "0.1.0"
edition = "2021"
authors = ["Guardian Network Solutions"]
description = "DNS filtering and safe browsing for Guardian OS"
license = "GPL-3.0"
repository = "https://github.com/guardian-network/guardian-os"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# DNS server
hickory-server = "0.24"
hickory-resolver = "0.24"
hickory-proto = "0.24"

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Fast pattern matching for blocklists
aho-corasick = "1.1"
regex = "1.10"

# Database for query logs
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for blocklist downloads
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Directories
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
