[package]
name = "guardian-selector"
version = "0.1.0"
edition = "2021"
authors = ["Guardian Network Solutions"]
description = "Boot-time child selector for Guardian OS"
license = "GPL-3.0"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for Supabase
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# System info
hostname = "0.4"
sysinfo = "0.31"

# Crypto for verification
ring = "0.17"
base64 = "0.22"

[profile.release]
lto = true
strip = true
