[package]
name = "guardian-settings"
version = "0.1.0"
edition = "2021"
authors = ["Guardian Network Solutions"]
description = "Parental control settings panel for Guardian OS"
license = "GPL-3.0"
repository = "https://github.com/guardian-network/guardian-os"

[dependencies]
# COSMIC/libcosmic UI framework
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master", default-features = false, features = ["tokio", "winit", "wgpu"] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic", branch = "master" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for Supabase
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Keyring for token storage
keyring = "2.3"

# Internationalization
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8"
rust-embed = "8.3"

[profile.release]
lto = true
strip = true
