[package]
name = "guardian-store"
version = "0.1.0"
edition = "2021"
authors = ["Guardian Network Solutions"]
description = "Family-safe app store for Guardian OS"
license = "GPL-3.0"
repository = "https://github.com/guardian-network/guardian-os"

[dependencies]
# COSMIC/libcosmic UI framework
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master", default-features = false, features = ["tokio", "winit", "wgpu"] }

# D-Bus for guardian-daemon communication
zbus = "4.4"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for Supabase
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Appstream parsing
appstream = { git = "https://github.com/jackpot51/appstream.git" }
flate2 = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Flatpak
libflatpak = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"
log = "0.4"

# Misc
chrono = "0.4"
dirs = "6"
open = "5"
rayon = "1"
regex = "1"

# Internationalization
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8"
rust-embed = "8.3"

[profile.release]
lto = true
strip = true
